objects/report_sender__Schedule_Log__c.object
<CustomObject>
    <description>Custom object which storing data about Report sending errors.</description>
    <fields>
        <fullName>report_sender__Email_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Data</label>
        <referenceTo>report_sender__Email_Data__c</referenceTo>
        <relationshipLabel>Schedule Logs</relationshipLabel>
        <relationshipName>Schedule_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_Tracking__c</fullName>
        <description>to track emails by Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Tracking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Error_Details__c</fullName>
        <description>Error detailed log</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>report_sender__Error_reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>report_sender__Execution_date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>report_sender__First_Open_Date__c</fullName>
        <description>track first opening</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to track if email is opened</description>
        <label>Is Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Open_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>to show how much times customers have opened email</description>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Schedule_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Schedule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Schedule Log</label>
    <listViews>
        <fullName>report_sender__All</fullName>
        <columns>NAME</columns>
        <columns>report_sender__Schedule_Name__c</columns>
        <columns>report_sender__Email_Data__c</columns>
        <columns>report_sender__Status__c</columns>
        <columns>report_sender__Execution_date__c</columns>
        <columns>report_sender__Report_Id__c</columns>
        <columns>report_sender__Error_Details__c</columns>
        <columns>report_sender__Error_reason__c</columns>
        <columns>report_sender__Is_Opened__c</columns>
        <columns>report_sender__Report_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>